--- a/trunk/G1MoonPie/res/layout/adminview.xml
+++ b/trunk/G1MoonPie/res/layout/adminview.xml
@@ -4,49 +4,89 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    
-    
-    
-    <TableLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-        
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-            <TextView
-			      android:id="@+id/textView1"
-			      android:layout_width="fill_parent"
-			      android:layout_height="fill_parent"
-			      android:layout_weight="1"
-			      android:text="Event ID" />
-            <TextView
-			      android:id="@+id/textView1"
-			      android:layout_width="fill_parent"
-			      android:layout_height="fill_parent"
-			      android:layout_weight="1"
-			      android:text="NumChoices" />
-            <TextView
-			      android:id="@+id/textView1"
-			      android:layout_width="fill_parent"
-			      android:layout_height="fill_parent"
-			      android:layout_weight="1"
-			      android:text="NumRounds" />
-            <TextView
-			      android:id="@+id/textView1"
-			      android:layout_width="fill_parent"
-			      android:layout_height="fill_parent"
-			      android:layout_weight="1"
-			      android:text="Date" />
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="match_parent"
+        android:layout_height="410dp" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TableLayout
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content" 
+		        android:id="@+id/EntryTable">
+		        
+		        <TableRow
+		            android:id="@+id/RowTitle"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content">
+		            <TextView
+					      android:id="@+id/tvEventID"
+					      android:layout_width="fill_parent"
+					      android:layout_height="fill_parent"
+					      android:layout_weight="1"
+					      android:text="Event ID" />
+		            <TextView
+					      android:id="@+id/tvType"
+					      android:layout_width="fill_parent"
+					      android:layout_height="fill_parent"
+					      android:layout_weight="1"
+					      android:text="Type" />
+		            <TextView
+					      android:id="@+id/tvNumChoices"
+					      android:layout_width="fill_parent"
+					      android:layout_height="fill_parent"
+					      android:layout_weight="1"
+					      android:text="NumChoices" />
+		            <TextView
+					      android:id="@+id/tvNumRounds"
+					      android:layout_width="fill_parent"
+					      android:layout_height="fill_parent"
+					      android:layout_weight="1"
+					      android:text="NumRounds" />
+		            <TextView
+					      android:id="@+id/tvDate"
+					      android:layout_width="fill_parent"
+					      android:layout_height="fill_parent"
+					      android:layout_weight="1"
+					      android:text="Date" />
 
         </TableRow>
     </TableLayout>
-    
-    <TextView
-			      android:id="@+id/tvInfo"
-			      android:layout_width="fill_parent"
-			      android:layout_height="fill_parent"
-			      android:text="get info" />
+
+        </LinearLayout>
+    </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/bRemove"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="invisible"
+            android:text="Remove" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            
+            android:text="" />
+
+        <Button
+            android:id="@+id/bComplete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="invisible"
+            android:text="Complete" />
+
+    </LinearLayout>
 
 </LinearLayout>
