--- a/G1MoonPie/res/layout/results.xml
+++ b/G1MoonPie/res/layout/results.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
-
+
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/resultsLabel"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="left"
