--- a/trunk/G1MoonPie/res/layout/new_event_form_old.xml
+++ b/trunk/G1MoonPie/res/layout/new_event_form_old.xml
@@ -39,6 +39,23 @@
                 android:orientation="horizontal"
                 android:layout_weight = "1"
                 >
+                
+              <RadioButton
+                android:id="@+id/openEvent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Open Event"
+                 />
+
+            <RadioButton
+                android:id="@+id/closedEvent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Closed Event"
+                android:checked="true"
+                 />
             </RadioGroup>
         </LinearLayout>
 
@@ -74,11 +91,38 @@
             android:layout_weight = "1"
              />
 
+        <TextView
+            android:id="@+id/usernameView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Username:"
+            android:layout_weight = "1"
+             />
 
-        <Space
+        <EditText
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="10" />
+            android:ems="10"
+            android:layout_weight = "1"
+             />
+        
+
+        <TextView
+            android:id="@+id/passwordView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Password:"
+            android:layout_weight = "1"
+             />
+        
+            <EditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPassword" />
+
 
             <Button
                 android:id="@+id/nextButton"
