--- a/trunk/G1MoonPie/res/layout/results.xml
+++ b/trunk/G1MoonPie/res/layout/results.xml
@@ -4,6 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <Button
+        android:id="@+id/newEvent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Start New Event" />
 
     <TextView
         android:id="@+id/resultsLabel"
@@ -20,8 +33,9 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="left"
-        android:layout_margin="15dp"
+        android:layout_margin="10dp"
         android:layout_weight="1"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="" />
 
     <TextView
@@ -29,8 +43,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:layout_margin="15dp"
+        android:layout_margin="10dp"
         android:layout_weight="1"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="" />
 
     <TextView
@@ -38,8 +53,9 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="left"
-        android:layout_margin="15dp"
+        android:layout_margin="10dp"
         android:layout_weight="1"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="" />
 
     <TextView
@@ -47,8 +63,9 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="left"
-        android:layout_margin="15dp"
+        android:layout_margin="10dp"
         android:layout_weight="1"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="" />
 
     <TextView
@@ -56,8 +73,9 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="left"
-        android:layout_margin="15dp"
+        android:layout_margin="10dp"
         android:layout_weight="1"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="" />
 
     <TextView
@@ -65,8 +83,9 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="left"
-        android:layout_margin="15dp"
+        android:layout_margin="10dp"
         android:layout_weight="1"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="" />
 
     <TextView
@@ -74,8 +93,9 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="left"
-        android:layout_margin="15dp"
+        android:layout_margin="10dp"
         android:layout_weight="1"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="" />
 
     <TextView
@@ -83,8 +103,9 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="left"
-        android:layout_margin="15dp"
+        android:layout_margin="10dp"
         android:layout_weight="1"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="" />
 
 </LinearLayout>
